[package]
name = "azdice-conrod"
version = "0.0.1"
authors = ["Aleksey Zholobenko"]

[dependencies]
rand="0.3.16"
conrod = "=0.57.0"
glium = { version = "=0.20", optional = true }
winit = { version = "=0.10", optional = true }
num= "0.1"
libc= {version ="=0.2.34",optional= true}
find_folder= "0.3.0"
clipboard = "=0.5.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto =true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[profile.dev]
opt-level = 2
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 2
panic = 'abort'
