[package]
name = "azdice"
version = "0.2.0"
authors = ["Aleksey Zholobenko <aleshaleksey@googlemail.com>"]

[dependencies]
rand="=0.3.16"
libazdice = { git = "https://github.com/aleshaleksey/libazdice.git", version = "0.2.2" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto =true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
